Remove the owner_type and owner_id fields from the repo_content_unit Add migration to remove the woner_type and owner_id from repo_content_units

--- a/docs/user-guide/release-notes/2.7.x.rst
+++ b/docs/user-guide/release-notes/2.7.x.rst
@@ -57,6 +57,8 @@ Binding API Changes
 
 Plugin API Changes
 ------------------
+* The undocumented fields 'owner_type' and 'owner_id' have been removed from the
+  'repo_content_units' collection.
 
 Thank You
 ---------
