Update to new contributor list for 2.6.1

--- a/docs/user-guide/release-notes/2.6.x.rst
+++ b/docs/user-guide/release-notes/2.6.x.rst
@@ -181,6 +181,7 @@ Thank You
 
 Thank you to all of Pulp's contributors, especially these new ones!
 
+- Adam D.
 - Andrea Giardini
 - Andreas Schieb
 - Ina Panova
