move master rel notes to 2.7.x

--- a/docs/user-guide/release-notes/2.7.x.rst
+++ b/docs/user-guide/release-notes/2.7.x.rst
@@ -8,7 +8,30 @@ Pulp 2.7.0
 New Features
 ------------
 
-- Pulp now allows users to add their own :ref:`content authentication mechanisms <content_auth_mechanisms>`.
+* Pulp now allows users to add their own :ref:`content authentication mechanisms <content_auth_mechanisms>`.
+
+* There are now two new REST APIs for :ref:`setting <set-user-metadata>` and
+  :ref:`retrieving <get-user-metadata>` user supplied metadata on content units.
+
+* `unit_<type>` collection indices will be destroyed and recreated for the last time when
+  pulp-manage-db runs during upgrade. All subsequent executions of pulp-manage-db will only create
+  new indices based on unit type definitions. Any user created indices for `unit_<type>`
+  collections will persist between upgrades.
+
+* There is now a new `working_directory` setting in `/etc/pulp/server.conf`. The default value is
+  `/var/cache/pulp`. This is the path where `pulp_workers` process can store data while performing
+  tasks. For best performance, this should be a path to local storage. This directory needs to be
+  writeable by user `apache`. If running with SELinux in Enforcing mode, the path also needs to
+  have `system_u:object_r:pulp_var_cache_t` security context.
+
+* The repo authentication functionality previously associated with pulp_rpm has
+  been moved to platform. This makes it available for other plugins to use.
+
+* A new event notification framework is available. Please see
+  :ref:`the developer documentation <event>` for more detail.
+
+* Pulp workers now perform heartbeats every 30 seconds instead of every two
+  seconds. See :redmine:`808` for more detail.
 
 Deprecation
 -----------
@@ -46,6 +69,16 @@ Known Issues
 Client Changes
 --------------
 
+* Admin and consumer Pulp clients now support `-v` and `-vv` flags to get
+  additional information. Server calls and exceptions raised for CLI and API
+  level failures are not logged to the log files anymore. Instead, you can get
+  the details of the failures on STDERR stream by using verbose flag. You can
+  look at an example of the usage of verbose flag in the :ref:`admin client
+  troubleshooting section <client-verbose-flag>`.
+
+* The `pulp-admin` command now supports obtaining detailed information for just
+  one repo via the :ref:`details <admin-client-list-repos>` flag.
+
 Agent Changes
 -------------
 
@@ -55,6 +88,16 @@ Rest API Changes
 Binding API Changes
 -------------------
 
+These are changes to the python bindings to pulp's REST API. This does not
+affect most users.
+
+User Create
+~~~~~~~~~~~
+
+The ``roles`` parameter to the user creation method was dropped. It was unused
+on the server side, and as of 2.7.0, the REST API complains about unused data
+passed in a POST request.
+
 Plugin API Changes
 ------------------
 
@@ -63,3 +106,5 @@ Thank You
 
 Thank you to all of Pulp's contributors, especially these new ones!
 
+* Graham Forest
+* Jonathan Mainguy
