Allow basic auth when syncing from repos
Nectar already has support for basic auth when downloading files. However, Pulp
did not have an option to set this on the importer.

This commit adds a `basic_auth_username` and `basic_auth_password` to importer
configs to allow for basic auth. Options to `pulp-admin` have also been added.
Plugins will not automatically be able to use basic auth, and will have to set
`include_basic_auth=True` when using the *ImporterConfigMixin* mixin.

This commit contains an additional security-related change to obfuscate
`basic_auth_password` and `proxy_password` in importer configs when returned
via the REST api.

re #163

--- a/docs/user-guide/release-notes/2.7.x.rst
+++ b/docs/user-guide/release-notes/2.7.x.rst
@@ -10,6 +10,14 @@ New Features
 
 - Pulp now allows users to add their own :ref:`content authentication mechanisms <content_auth_mechanisms>`.
 
+- Pulp now supports using basic authentication when syncing repositories. This
+  can be enabled via ``--basicauth-user`` and ``--basicauth-pass`` when
+  creating or updating repositories. Note that this also requires support in the
+  plugin; currently only pulp_rpm supports this option.
+
+- Pulp no longer returns proxy passwords or basic authentication passwords when
+  viewing importer configurations.  Instead, ``*****`` is returned.
+
 Deprecation
 -----------
 
