ref #214, support distributor search.

--- a/docs/user-guide/release-notes/2.7.x.rst
+++ b/docs/user-guide/release-notes/2.7.x.rst
@@ -41,6 +41,9 @@ New Features
 - Pulp no longer returns proxy passwords or basic authentication passwords when
   viewing importer configurations.  Instead, ``*****`` is returned.
 
+* Added ``/v2/distributors/search/`` REST API endpoint to support distributor searches.
+
+
 Deprecation
 -----------
 
