--- a/deps/python-kombu/README
+++ b/deps/python-kombu/README
@@ -1,29 +1,36 @@
 Team owner: bbouters
 
-Celery 3.1.11 requires kombu>=3.0.15,<4.0, which is not in Fedora <= 20, or EPEL <= 7.
+Celery 3.1.11 requires kombu>=3.0.15,<4.0, which is not in Fedora <= 20, or
+EPEL <= 7.
 
-Pulp would like to use the Qpid transport which is available in upstream kombu>=3.0.24
+Pulp would like to use the Qpid transport which is available in upstream
+kombu>=3.0.24
 
 
 Permanent Patches:
 
-1212200.patch - This patch will need to continue to be with us forever as it works around a
-                permanent downstream issue whereby ordereddict is installed as part of the Python
-                system library, and not in site-packages. This is not contributed to upstream Kombu.
+1212200.patch - This patch will need to continue to be with us forever as it
+                works around a permanent downstream issue whereby ordereddict
+                is installed as part of the Python system library, and not in
+                site-packages. This is not contributed to upstream Kombu.
 
 
 Temporary Patches:
 
-This are contributed to upstream Kombu and will be included in a future release of Kombu, but until
-it is we include it in downstream.
+This are contributed to upstream Kombu and will be included in a future release
+of Kombu, but until it is we include it in downstream.
 
-1195361.patch - Fixes close bug where the connection was not being closed. This fixes
-                https://github.com/celery/kombu/issues/455
+1195361.patch - Fixes close bug where the connection was not being closed. This
+                fixes https://github.com/celery/kombu/issues/455
+
+476.patch - Fixes file descriptor leak issue:
+            https://github.com/celery/kombu/issues/476
 
 
 Patches that need to be contributed upstream:
 
-1182322.patch - Fixes an auth mechanism issue. This patch adds an additional string that is
-                returned when PLAIN is not available and the python-saslwrapper is installed. I
-                don't think an upstream issue was filed on this, and I don't think it is in
-                upstream yet. It should be contributed upstream.
+1182322.patch - Fixes an auth mechanism issue. This patch adds an additional
+                string that is returned when PLAIN is not available and the
+                python-saslwrapper is installed. I don't think an upstream
+                issue was filed on this, and I don't think it is in upstream
+                yet. It should be contributed upstream.
