--- a/docs/user-guide/release-notes/2.6.x.rst
+++ b/docs/user-guide/release-notes/2.6.x.rst
@@ -2,6 +2,14 @@
 Pulp 2.6 Release Notes
 =========================
 
+Pulp 2.6.2
+==========
+
+Bug Fixes
+---------
+
+This is a minor release which contains bug fixes for :fixedbugs:`these issues <2.6.2>`.
+
 Pulp 2.6.1
 ==========
 
