Task 952: Delete unused models from server.db.models.dispatch
https://pulp.plan.io/issues/952

Closes #952

--- a/docs/user-guide/release-notes/2.7.x.rst
+++ b/docs/user-guide/release-notes/2.7.x.rst
@@ -52,6 +52,11 @@ Deprecation
 
 .. _2.6.x_upgrade_to_2.7.0:
 
+* The ``archived_calls`` setting in ``server.conf`` is removed. It has not been used in several releases.
+
+* The ``archived_calls`` collection is dropped from the database with a migration.
+
+
 Upgrade Instructions for 2.6.x --> 2.7.0
 -----------------------------------------
 
