Adds pymongo 2.7.2 and mongoengine 0.9.0
The pymongo spec file skips tests that require a running
instance of mongodb. I manually ran the tests against a
running instance once and they all passed for me. If we
ever configure the builder with a running instance of mongodb
we can delete the --exclude list in the pymongo spec file.

Updates pulp.server.db.manage:ensure_database_indexes()
to only use the Document.ensure_indexes() method.

Removes pulp.server.db.model.queryset:update_one() which was
here for 0.7.10 compatability.

This also updates all tests to run correctly when the test
runner has mongoengine==0.9.0 and pymongo==2.7.2 installed.

Test server.managers.repo.test_cud:test_update_repo_and_plugins
is removed altogether. I don't know why it was failing after
upgrading the deps, but when I downgrade the deps back to
mongoengine 0.7.10 and pymongo 2.5.3 it passed. It's safe to
remove altogether here because it has completely been removed
and rewritten with #1931.

https://pulp.plan.io/issues/934
fixes #934

--- a/deps/python-mongoengine/README
+++ b/deps/python-mongoengine/README
@@ -1,3 +1,14 @@
-Team owner: cduryee
+Team owner: bmbouter
 
-This is the same as the EPEL6 srpm. It is included here for building for el7, since EPEL7 does not carry python-mongoengine.
+Pulp uses a vanilla version of mongoengine 0.9.0, except for one
+patch which removes Pillow as a setuptools dependency. Not
+having Pillow installed at runtime will disable the ImageField,
+but mongoengine will operate fully otherwise. At the time I built
+mongoengine 0.9.0, Pillow is not available on EL6.
+
+python-mongoengine requires at least pymongo 2.7.1 at runtime.
+
+The spec file was originally adapted from the spec file inside of
+python-mongoengine-0.8.4-3.el7.src.rpm [0].
+
+[0]: http://koji.fedoraproject.org/koji/buildinfo?buildID=612617
