Adjusts Qpid broker string and includes Kombu SASL fixes.
This includes all the patches from before consolidated into one
patch and also includes the fix for
https://github.com/celery/kombu/issues/498

The pulp broker string for the [tasks] section is adjusted to
not specify 'guest' as the default username. This will force
Kombu to use ANONYMOUS auth by default.

https://pulp.plan.io/issues/1152
closes #1152

--- a/docs/user-guide/release-notes/2.6.x.rst
+++ b/docs/user-guide/release-notes/2.6.x.rst
@@ -2,6 +2,18 @@
 Pulp 2.6 Release Notes
 =========================
 
+Pulp 2.6.4
+==========
+
+Pulp now connects to Qpid with the ANONYMOUS SASL authentication
+mechanism. This aligns with Qpid's default behavior.
+
+Bug Fixes
+---------
+
+This is a minor release which contains bug fixes for :fixedbugs:`these issues <2.6.4>`.
+
+
 Pulp 2.6.3
 ==========
 
