Removes MongoDB as celery result backend
This patch also removes the FailureHandler which relied on checking the
results backend to determine if a scheduled task needs to have it's
schedule disabled after reaching a failure threshold. The logic is moved
to the on_success and on_failure methods for Task defined in Pulp.

https://pulp.plan.io/issues/956
fixes #956
https://pulp.plan.io/issues/1084
fixes #1084

--- a/docs/user-guide/release-notes/2.7.x.rst
+++ b/docs/user-guide/release-notes/2.7.x.rst
@@ -56,6 +56,9 @@ Deprecation
 
 * The ``archived_calls`` collection is dropped from the database with a migration.
 
+* MongoDB is no longer used as the celery result backend. The 'celery_taskmeta' collection will be
+  removed with a migration in a future release.
+
 
 Upgrade Instructions for 2.6.x --> 2.7.0
 -----------------------------------------
