Adds login_method options to [tasks] section of server.conf
If login_method is set, the value is used to configure the
BROKER_LOGIN_METHOD Celery option. login_method defaults
to '' which allows Celery to use its default values.

This change includes docs updates on practical usage of the new
setting and a release note.

closes #1168
https://pulp.plan.io/issues/1168

--- a/docs/user-guide/release-notes/2.6.x.rst
+++ b/docs/user-guide/release-notes/2.6.x.rst
@@ -5,8 +5,11 @@ Pulp 2.6 Release Notes
 Pulp 2.6.4
 ==========
 
-Pulp now connects to Qpid with the ANONYMOUS SASL authentication
-mechanism. This aligns with Qpid's default behavior.
+* Pulp now connects to Qpid with the ANONYMOUS SASL authentication mechanism by
+  default. This aligns with Qpid's default behavior.
+
+* A new setting named ``login_method`` has been added to the ``[tasks]`` section of server.conf.
+  See server.conf docs for more details.
 
 Bug Fixes
 ---------
