--- a/docs/user-guide/release-notes/2.7.x.rst
+++ b/docs/user-guide/release-notes/2.7.x.rst
@@ -49,6 +49,9 @@ New Features
 * A new setting named ``unsafe_autoretry`` is introduced in the ``[database]`` section of
   `/etc/pulp/server.conf`. See the docs in server.conf for more details.
 
+* Pulp properly connects to MongoDB replica sets. The `replica_set` setting in `database` section
+  of `/etc/pulp/server.conf` must be provided for Pulp to connect to a replica set.
+
 
 Deprecation
 -----------
