Adds support for write concern
Pulp now accepts a write concern for the MongoDB connection. All writes
to the database are now acknowledged. For replica sets, 'majority' or 'all'
members can be asked to acknowledge the write.

closes: #974
closes: #1139

--- a/docs/user-guide/release-notes/2.7.x.rst
+++ b/docs/user-guide/release-notes/2.7.x.rst
@@ -52,6 +52,10 @@ New Features
 * Pulp properly connects to MongoDB replica sets. The `replica_set` setting in `database` section
   of `/etc/pulp/server.conf` must be provided for Pulp to connect to a replica set.
 
+* Pulp allows users to specify the write concern for MongoDB connection. The two options are
+  'majority' and 'all'. When 'all' is specified, the number of seeds listed will be used as the value
+  for 'w'. For installations without replica sets, all writes to the database will be acknowledged.
+
 
 Deprecation
 -----------
