--- a/docs/user-guide/release-notes/2.6.x.rst
+++ b/docs/user-guide/release-notes/2.6.x.rst
@@ -2,6 +2,41 @@
 Pulp 2.6 Release Notes
 =========================
 
+Pulp 2.6.4
+==========
+
+Pulp 2.6.4 is an important security update.
+
+A security flaw (CVE-2015-5263) was discovered in Pulp's consumer
+management system. When the pulp-consumer CLI is used to register to the
+Pulp server, it downloads a public key from the Pulp server and stores
+it locally. Later when the Pulp server sends messages to the client via
+a message broker to instruct it to perform commands, it will use the
+corresponding private key to sign the messages. The client checks the
+signatures before executing the instructions to ensure that the messages
+came from the Pulp server and not from an attacker.
+
+Versions of pulp-consumer-client between 2.4.0 and 2.6.3 do not check
+the server's TLS certificate signatures when retrieving the server's
+public key upon registration:
+
+https://github.com/pulp/pulp/blob/aa432bf58497b5e3682333b1d5f5ae4f45788a61/client_consumer/pulp/client/consumer/cli.py#L103
+
+This allows a man in the middle to inject their own message signing
+key and to then perform administrative actions on the machine, if they
+are able to send messages through the message broker.
+
+Austin Macdonald fixed this issue in this commit by using our
+pulp.bindings library as the rest of our CLI does:
+
+https://github.com/pulp/pulp/commit/b542d7465f7e6e02e1ea1aec059ac607a65cefe7#diff-17110211f89c042a9267e2167dedd754
+
+Users who do not use pulp-consumer are not affected by this issue.
+
+Thanks to Austin Macdonald for writing the fix, to Dennis Kliban for making
+our beta and release build, and to Preethi Thomas for testing our
+releases!
+
 Pulp 2.6.3
 ==========
 
