Add a link to the fixed bug in the release notes.

--- a/docs/user-guide/release-notes/2.6.x.rst
+++ b/docs/user-guide/release-notes/2.6.x.rst
@@ -5,7 +5,8 @@ Pulp 2.6 Release Notes
 Pulp 2.6.4
 ==========
 
-Pulp 2.6.4 is an important security update.
+Pulp 2.6.4 is an important security update. It fixes
+:fixedbugs:`one issue <2.6.4>`.
 
 A security flaw (CVE-2015-5263) was discovered in Pulp's consumer
 management system. When the pulp-consumer CLI is used to register to the
