--- a/deps/mod_wsgi/README
+++ b/deps/mod_wsgi/README
@@ -1,3 +1,5 @@
-Team owner: skarmarkar
+Team owner: dkliban
 
 pulp requires 3.4, which is not available in EPEL 6.
+
+TODO: why does pulp need 3.4?
