--- a/deps/python-nectar/README
+++ b/deps/python-nectar/README
@@ -1,3 +1,6 @@
+Owner: ipanova
+Assistant: asmacdo
+
 This is required by pulp and authored by the pulp team. Once pulp building is
 moved into koji, this can probably be removed as a dep and build through normal
 koji means.
