--- a/deps/python-rhsm/README
+++ b/deps/python-rhsm/README
@@ -1,4 +1,4 @@
-Team owner: rbarlow
+Team owner: asmacdo
 
 pulp requires python-rhsm, which is not available in CentOS 6 or 7. We do not currently carry
 the most recent version of python-rhsm. If it is found that we need to, we can update.
