--- a/deps/README
+++ b/deps/README
@@ -53,7 +53,7 @@ Team owner: bmbouter
 Pulp requires celery 3.1, which is not available in Fedora <= 20 or EPEL <= 7.
 
 
-python-iso-date
+python-isodate
 ---------------
 
 Team owner: jcline
