--- a/deps/README
+++ b/deps/README
@@ -37,11 +37,7 @@ python-amqp
 
 Team owner: bmbouter
 
-kombu 3.0.24 requires amqp>=1.4.6,<2.0, which is not available in EPEL <= 7, or Fedora <= 20.
-
-This requirement may not actually be necessary if amqp becomes available on the necessary platforms [0].
-
-[0]: https://apps.fedoraproject.org/packages/python-amqp/overview/
+kombu 3.0.24 requires amqp>=1.4.6,<2.0, which is not available in EPEL <= 7.
 
 
 python-billiard
@@ -49,8 +45,7 @@ python-billiard
 
 Team owner: bmbouter
 
-celery-3.1.11 requires billiard>=3.3.0.17,<3.4, and a new-enough version is not available in
-Fedora <= 20 or EPEL <= 7.
+celery-3.1.11 requires billiard>=3.3.0.17,<3.4, which is not available in EPEL <= 7.
 
 
 python-celery
@@ -58,7 +53,7 @@ python-celery
 
 Team owner: bmbouter
 
-Pulp requires celery 3.1, which is not available in Fedora <= 20 or EPEL <= 7.
+Pulp is tested against celery 3.1.11, which is not available in any Fedora or EPEL <= 7.
 
 
 python-isodate
