--- a/AUTHORS
+++ b/AUTHORS
@@ -8,7 +8,7 @@ Dominic Cleal (dcleal@redhat.com)
 Jeremy Cline (jcline@redhat.com)
 Jason L Connor (jconnor@redhat.com)
 Barnaby Court (bcourt@redhat.com)
-Patrick Creech (pcreech17@gmail.com)
+Patrick Creech (pcreech@redhat.com)
 Michael DeHaan (mdehaan@redhat.com)
 Jay Dobies (jason.dobies@redhat.com)
 Máirín Duffy (duffy@redhat.com)
