Issue 1636: Developer oriented error messages added as coded exceptions
https://pulp.plan.io/issues/1636

closes #1636

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,6 +2,7 @@ This is an alphabetical (by last name) list of the authors of the Pulp project. 
 to Pulp and your name is not on this list, please add yourself.
 
 Randy Barlow (rbarlow@redhat.com)
+Shubham Bhawsinka(sbhawsin@redhat.com)
 James Bowes (jbowes@redhat.com)
 Ryan Bowlby (rbowlby@mobitv.com)
 Dominic Cleal (dcleal@redhat.com)
